Made final changes to improving baseline model notebook

--- a/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
+++ b/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
@@ -1523,7 +1523,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll slowly build upon this and make this model better while learning more about building state-of-the-art models in the upcoming posts."
+    "We'll slowly build upon this and make this model better while learning more about building state-of-the-art models in the upcoming posts.\n",
+    "\n",
+    "***Update:*** The upcoming post to this can be found [here](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/model%20fine-tuning/2020/04/10/Improving-baseline-model.html) where I employ Fastai techniques with an aim to build a SOTA model. "
    ]
   },
   {
