--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Improving flowers-102 baseline model\n",
-    "> Aim\n",
+    "# Improving upon flowers-102 baseline model\n",
+    "> With an aim to build a SOTA model by employing Fastai techniques.\n",
     "\n",
     "- toc: true\n",
     "- branch: master\n",
