--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -1001,18 +1001,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 1 cycle training"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Another novel approach of training brought about easily using Fastai is Leslie Smith's 1cycle training approach. \n",
     "\n",
@@ -1028,9 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1086,9 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.unfreeze()"
@@ -1096,9 +1088,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We unfreeze the previous pretrained layers and train them specifically for our task of classifying flowers"
    ]
@@ -1106,9 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1149,9 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can see that this plot is different as we are finding the best minima to land on an already trained model. Let's choose an LR somewhere in the middle before the loss explodes again! \n",
     "\n",
@@ -1162,7 +1148,6 @@
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1239,9 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "In addition to this it also implements the `cyclical momentum` trick as mentioned by Leslie Smith in his paper. \n",
     "\n",
@@ -1252,9 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can view the learning rates and momentum plots during training as follows:"
    ]
@@ -1262,9 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1285,9 +1264,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can clearly see that the plots btween learning rate and momentum are inversely proportional as explained above."
    ]
@@ -1295,9 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1319,9 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1344,7 +1317,6 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1367,20 +1339,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can see that the training loss and validation loss is stil decreasing and we get an accuacy of about 97%. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    ">To learn more about the 1cycle training approache refer to Sylvain's [post](https://sgugger.github.io/the-1cycle-policy.html#the-1cycle-policy) on it or chapter 13 of the [Fastbook](https://github.com/fastai/fastbook).\n",
+    "> To learn more about the 1cycle training approach refer to Sylvain's [post](https://sgugger.github.io/the-1cycle-policy.html#the-1cycle-policy) on it or chapter 13 of the [Fastbook](https://github.com/fastai/fastbook).\n",
     "\n",
     "---"
    ]
