--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -1348,8 +1348,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> To learn more about the 1cycle training approach refer to Sylvain's [post](https://sgugger.github.io/the-1cycle-policy.html#the-1cycle-policy) on it or chapter 13 of the [Fastbook](https://github.com/fastai/fastbook).\n",
-    "\n",
+    "> To learn more about the 1cycle training approach refer to Sylvain's [post](https://sgugger.github.io/the-1cycle-policy.html#the-1cycle-policy) on it or chapter 13 of the [Fastbook](https://github.com/fastai/fastbook)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
