--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -24,34 +24,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Introduction "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "In my previous blog post [\"Building an image classifier using Fastai V2\n",
     "\"](https://harish3110.github.io/through-tinted-lenses/fastai/image%20classification/2020/03/29/Building-an-image-classifier-using-Fastai-V2.html), I introduced the Fastai V2 library by building a baseline flower classifier model on the flowers-102 dataset. \n",
     "\n",
-    "The baseline model achieved an accuracy of about 96.2% on the validation set which is definitley a good starting point. In this post i'll be using some of the techniques learnt in the [Fastai]() to further improve the model by carefully training the model. \n",
-    "\n",
-    "The main aim of this post is to improve on my current baseline by employing some of the strategies taught in the Fastai course in order to reach the SOTA for the flowers-102 dataset which is an accuracy of 99.7%. \n",
+    "The baseline model created achieved an accuracy of about 96.2% on the validation set. The main aim of this post is to improve on my current baseline by employing some of the strategies taught in the Fastai course in order to reach the SOTA for the flowers-102 dataset which is an accuracy of 99.7%. \n",
     "\n",
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Let's first import the Fastai V2 library:"
    ]
@@ -59,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from fastai2.vision.all import *\n",
@@ -71,9 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#hide\n",
@@ -83,37 +71,41 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## Re-loading the model"
+    "## Re-loading the baseline model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "In the previous post, I saved the model created in order to re-load it again when needed. All that does is save the weights and bias matrices for each of the layers of the resnet-34 used. When we did a save of the model, behind the scenes Fastai saves the model in PyTorch models `state_dict` and stores it in a pickle file.\n",
+    "In the previous post, I saved the model created in order to re-load it again when needed. A saved model basically saves the weights and bias matrices for each of the layers of the architecture trained for the specific task. When the model is saved, behind the scenes Fastai uses saves the models `state_dict` and stores it in a pickle file.\n",
     "\n",
     "To reload the model we could simply do: ```learn.load('flowers-baseline')```\n",
     "\n",
-    "But hold on, it isn't that simple. \n",
+    "But hold on, it isn't quite that simple. \n",
     "\n",
-    "To load all those weight matrices properly we need clearly define the architecture of the model as it was while creating the model. So we follow the same steps as we did last time to create the `DataBlock` then creating the `dataloaders` from it and specify the architecture we used by creating the `Learner`."
+    "To load all those weight matrices properly we need to clearly define the architecture of the model as it was defined while training the model. So we follow the same steps as we did last time to create the `DataBlock`, then creating the `dataloaders` from it and finally specify the architecture we used by creating the `Learner`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "path = untar_data(URLs.FLOWERS)\n",
@@ -123,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "files = get_image_files(path/'jpg')"
@@ -132,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def get_x(r): return path/r['name']\n",
@@ -149,7 +145,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learn = cnn_learner(dls, resnet34, metrics=accuracy)"
@@ -158,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -177,39 +177,50 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "To view the weight and bias matrices of our model we can check its `state_dict` as follows\n",
+    "To view the weight and bias matrices of our model we can check its `state_dict` as follows:\n",
     "\n",
     "```learn.model.state_dict()```"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> ***Note:*** When we do a `model.save` behind the scenes Fastai is calling upon PyTorch to save this `state_dict`. Something along the lines of this:\n",
     "```torch.save(learn.model.state_dict(), 'checkpoint.pkl')```\n",
-    "This is what is also happening when we use a pretrained model. We are basically taking the `state_dict` of a model trained for hours together and using it for our purposes!"
+    "\n",
+    ">This is what is also happening when we use a pretrained model. We are basically taking the `state_dict` of a model trained for hours together and using it for our purposes!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Now that our pre-trained model is loaded, lets check where we stand by interpreting and validating our model on the validation set. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Model Interpretation"
    ]
@@ -217,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -236,17 +249,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "One way to see how good your model is doing by using the confusion matrix which basically plots the number of correct predictions of the particular class as well which predictions were wrongly classified as the other as a square matrix.\n",
+    "One way to see how good your model is doing by using the `confusion matrix` which basically plots the matrix of correct predictions of the each class as compared to others. This means we can see the classes that were mistaken as the other by looking at a single class. \n",
     "\n",
-    "But in this case reading a confusion matrix would actually be pretty confusing since there are 102 different classes. So instead Fastai's `most_confused` will be used. This plots just the classes which were most frequently classified wrong which can be considered as a more refined and consise version of the confusion matrix."
+    "But in this case reading a confusion matrix would actually be pretty confusing since there are 102 different classes. So instead Fastai's `most_confused` will be used. This plots just the classes which were most frequently classified wrong which can be considered as a more refined and consise version of the confusion matrix.\n",
+    "\n",
+    "So since all we want to know is which classes were moslty classified we can use Fastai's `most_confused` method as follows:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -269,18 +288,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "---\n",
     "### Model Prediction\n",
     "\n",
-    "Let's see how our model fares on new images taken from Google. I'm using an image of a sunflower here as sghown below."
+    "Let's see how our model fares on new images taken from Google. I'm using an image of a sunflower here:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -313,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -343,7 +368,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -362,7 +389,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Let's use the `accuracy` method in Fastai to check the validation accuracy of the model:"
    ]
@@ -370,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -389,7 +420,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "This is same as using the `validate` on the learner:"
    ]
@@ -397,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -426,14 +461,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "So that's our baseline model of an accuracy of 96.2%. Let's try to improve upon it!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "---"
    ]
