fixed grammar till presizing

--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -492,9 +492,9 @@
     "hidden": true
    },
    "source": [
-    "In the previous post, I explain how the images passed to the GPU needs to have the same dimensions so that they can be collated into tensors and effectively transfereend onto to GPU. Thus at the very least doing a ***Resize*** operation in the `item_tfms` when creating the DataBlock is mandatory. \n",
+    "In the previous post, I explain how the images passed to the GPU needs to have the same dimensions so that they can be collated into tensors and effectively transferred onto to GPU. Thus at the very least doing a ***Resize*** operation in the `item_tfms` when creating the `DataBlock` is mandatory. \n",
     "\n",
-    "But if you think about it, simply resizing images is not a great idea. This might lead to producing croped off images, or images with empty zones i.e. images that aren't good. \n",
+    "But if you think about it, simply resizing images is not a great idea. This might lead to producing improper cropped images, or images with empty areas or only parts of an image. \n",
     "\n",
     "Also, doing all these transforms on a GPU is an expensive process, so finding an effective way to get this done by composing the augmentations to reduce the number of transforms being done would also be quite helpful\n",
     "\n",
@@ -548,7 +548,7 @@
    "source": [
     "We see that the images are rectangle images with a fixed width of 500 and varying height. We can either work with rectangle images for our model but based on Jeremy's experimentation, in practice working with square images makes computation faster and produces almost similar results. \n",
     "\n",
-    "So lets choose a size of 460*460 that's smaller than the original image and gives us enough wiggle room to work with for augmentations. Let's see how that resize looks like:\n",
+    "So lets choose a size of 460*460 that's smaller than the original image and gives us enough wiggle room to work with for the augmentations. Let's see how that resize looks like:\n",
     "\n",
     "> ***Note:*** By default, Fastai does a random crop when calling the resize function. "
    ]
@@ -622,7 +622,9 @@
     "hidden": true
    },
    "source": [
-    "We then use `aug_transforms` which is a Fastai utility function to perform a list of transforms efficiently on images. \n",
+    "We then use `aug_transforms` which is a Fastai utility function to perform a list of transforms efficiently on images as follows:\n",
+    "\n",
+    "```batch_tfms=aug_transforms(size=224, min_scale=0.75)```\n",
     "\n",
     "Here by choosing a `size` of '224' and `min_scale` != 1, We are telling Fastai to perform a random resized crop on the images to the final size of 224*224.  "
    ]
@@ -633,7 +635,7 @@
     "hidden": true
    },
    "source": [
-    "> ***Note:***: A `RandomResizedCrop` by default does a random crop of images in the training set and does a center crop of images in the validation set. "
+    "> ***Note:*** A `RandomResizedCrop` by default does a random crop of images in the training set and does a center crop of images in the validation set. "
    ]
   },
   {
@@ -791,7 +793,7 @@
     "hidden": true
    },
    "source": [
-    "We can see that Presizing improved the accuracy of the model by almost 1% (from 96% to 97%), we can see that the validation loss is also reducing and so is the training loss. \n",
+    "We can see that `Presizing` improved the accuracy of the model by almost 1% (from 96% to 97%), we can also see that the validation loss is also reducing and so is the training loss. \n",
     "\n",
     "> In practice, Fastai's recommendation is to always use presizing as it siginficantly improves model performance as the images obtained by doing all the destructive augmentation steps in a composed and efficient manner leads to better quality images. Additionally, by composing these transforms together there is an additional advantage of the model training faster overall. "
    ]
@@ -1040,14 +1042,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 1 cycle training"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Another novel approach of training brought about easily using Fastai is Leslie Smith's 1cycle training approach. \n",
     "\n",
@@ -1063,7 +1069,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1119,7 +1127,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "learn.unfreeze()"
@@ -1127,7 +1137,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We unfreeze the previous pretrained layers and train them specifically for our task of classifying flowers"
    ]
@@ -1135,7 +1147,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1176,7 +1190,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We can see that this plot is different as we are finding the best minima to land on an already trained model. Let's choose an LR somewhere in the middle before the loss explodes again! \n",
     "\n",
@@ -1187,6 +1203,7 @@
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1263,7 +1280,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "In addition to this it also implements the `cyclical momentum` trick as mentioned by Leslie Smith in his paper. \n",
     "\n",
@@ -1274,7 +1293,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We can view the learning rates and momentum plots during training as follows:"
    ]
@@ -1282,7 +1303,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1303,7 +1326,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We can clearly see that the plots btween learning rate and momentum are inversely proportional as explained above."
    ]
@@ -1311,7 +1336,9 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1333,7 +1360,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1356,6 +1385,7 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1378,21 +1408,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We can see that the training loss and validation loss is stil decreasing and we get an accuacy of about 97%. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> To learn more about the 1cycle training approach refer to Sylvain's [post](https://sgugger.github.io/the-1cycle-policy.html#the-1cycle-policy) on it or chapter 13 of the [Fastbook](https://github.com/fastai/fastbook)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "---"
    ]
