fixed grammar till lr finder

--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -822,7 +822,7 @@
     "hidden": true
    },
    "source": [
-    "We know that choosing a good learning rate for the training process is vital, till now we were using the default learning rate used in Fastai but let's dig deeper and choose a more suitable one for better training of the model."
+    "We know that choosing a good learning rate for the training process is vital. Till now we were using the default learning rate used in Fastai but let's dig deeper and choose a more suitable one for training the model more efficiently."
    ]
   },
   {
@@ -855,6 +855,17 @@
     "                   item_tfms = item_tfms,\n",
     "                   batch_tfms = batch_tfms)\n",
     "dls = dblock.dataloaders(df) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Fastai employs the popular `learning rate finder` trick as created by Leslie Smith to find an optimum learning rate to train a neural network model. In short the learning rate finder is a plot of the loss of our model over an epoch by gradually increasing our learning rate from a low value at each mini-batch to a very high value until the loss blows off. Then a smooth version of this plot is used to determine the region where the 'best learning' takes place and accordingly an ideal learning rate is decided upon.\n",
+    "\n",
+    "This is done in Fastai as follows:"
    ]
   },
   {
@@ -917,11 +928,11 @@
     "hidden": true
    },
    "source": [
-    "From the above plot we can see that the plot has areas where loss is plateaud at first(i.e. no learning is taking place), then there is a gradual descent where the bulk of learning takes place and finally the loss shoots up and model goues out of wack!\n",
+    "From the above plot we can see that the plot has areas where loss is plateaud at first(i.e. no learning is taking place), then there is a gradual descent where the bulk of learning takes place and finally the loss shoots up and model goes out of wack!\n",
     "\n",
-    "We would like to choose a learning rate somewhere in the region where there's the gradual descent, not too low where the training process is waning but somewhere in the middle.\n",
+    "We would like to choose a learning rate somewhere in the region where there's the gradual descent, not too low where the training process is waning but somewhere in the middle where the slope is high enough to induce a good learning for the model.\n",
     "\n",
-    "In this learning rate plot it appears that a learning rate around 3e-3 would be appropriate, so let's choose that."
+    "In this learning rate plot it appears that a learning rate around `3e-3` has a good learning slope and would be appropriate, so let's choose that."
    ]
   },
   {
@@ -1019,7 +1030,7 @@
     "hidden": true
    },
    "source": [
-    "***Note:*** : Everytime you change something in the model and need to retrain you need to reset learner. "
+    "***Note:*** : Everytime you change something in the model and need to retrain again, you will need to reset the learner. "
    ]
   },
   {
