fixed grammar complete

--- a/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
+++ b/_notebooks/2020-03-29-Building an image classifier using Fastai V2.ipynb
@@ -1541,7 +1541,12 @@
     "\n",
     "4. [Fastbook](https://github.com/fastai/fastbook) i.e Deep Learning for Coders with Fastai and Pytorch: AI Applications Without a PhD by Jeremy Howard and Sylvain Gugger\n",
     "\n",
-    "5. [Fastai DataBlock API walkthrough](https://t.co/b1ZFLpJ1DN?amp=1) blog by [Zach Mueller](https://forums.fast.ai/u/muellerzr/summary)\n",
+    "5. [Fastai DataBlock API walkthrough](https://t.co/b1ZFLpJ1DN?amp=1) blog by [Zach Mueller]\n",
+    "(https://forums.fast.ai/u/muellerzr/summary)\n",
+    "\n",
+    "6. [Super-Convergence: Very Fast Training of Neural Networks Using Large Learning Rates](https://arxiv.org/abs/1708.07120) paper by Leslie Smith\n",
+    "\n",
+    "7. [Cyclical Learning Rates for Training Neural Networks](https://arxiv.org/abs/1506.01186) paper by Leslie Smith\n",
     "\n",
     "---\n",
     "\n",
