--- a/_notebooks/2020-04-10-Improving baseline model.ipynb
+++ b/_notebooks/2020-04-10-Improving baseline model.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Improving upon flowers-102 baseline model\n",
     "> With an aim to build a SOTA model by employing Fastai techniques.\n",
@@ -19,9 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
@@ -29,8 +25,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Introduction "
@@ -95,19 +90,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Re-loading the baseline model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "In the previous post, I saved the model created in order to re-load it again when needed. A saved model basically saves the weights and bias matrices for each of the layers of the architecture trained for the specific task. When the model is saved, behind the scenes Fastai uses saves the models `state_dict` and stores it in a pickle file.\n",
     "\n",
@@ -121,9 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "path = untar_data(URLs.FLOWERS)\n",
@@ -133,9 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "files = get_image_files(path/'jpg')"
@@ -144,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_x(r): return path/r['name']\n",
@@ -163,9 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn = cnn_learner(dls, resnet34, metrics=accuracy)"
@@ -174,9 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -195,9 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "To view the weight and bias matrices of our model we can check its `state_dict` as follows:\n",
     "\n",
@@ -206,9 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "> ***Note:*** When we do a `model.save` behind the scenes Fastai is calling upon PyTorch to save this `state_dict`. Something along the lines of this:\n",
     "```torch.save(learn.model.state_dict(), 'checkpoint.pkl')```\n",
@@ -218,37 +194,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now that our pre-trained model is loaded, lets check where we stand by interpreting and validating our model on the validation set. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "### Model Interpretation"
+    "### Model interpretation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -267,11 +235,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "One way to see how good your model is doing by using the `confusion matrix` which basically plots the matrix of correct predictions of the each class as compared to others. This means we can see the classes that were mistaken as the other by looking at a single class. \n",
+    "One way to see how good your model is doing by using the `confusion matrix` which basically plots the matrix of correct predictions of the each class as compared to others. This means we can see the classes that were mistaken as the other by looking at a single class. You can do so in Fastai by running the following code:\n",
+    "\n",
+    "```interp.plot_confusion_matrix(figsize=(12,12), dpi=60)```\n",
     "\n",
     "But in this case reading a confusion matrix would actually be pretty confusing since there are 102 different classes. So instead Fastai's `most_confused` will be used. This plots just the classes which were most frequently classified wrong which can be considered as a more refined and consise version of the confusion matrix.\n",
     "\n",
@@ -281,9 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -306,12 +272,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---\n",
-    "### Model Prediction\n",
+    "### Model prediction\n",
     "\n",
     "Let's see how our model fares on new images taken from Google. I'm using an image of a sunflower here:"
    ]
@@ -319,9 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -354,9 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -386,9 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -407,9 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Let's use the `accuracy` method in Fastai to check the validation accuracy of the model:"
    ]
@@ -417,9 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -438,9 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "This is same as using the `validate` on the learner:"
    ]
@@ -448,9 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -479,18 +429,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "So that's our baseline model of an accuracy of 96.2%. Let's try to improve upon it!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
@@ -498,8 +444,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Presizing and fine_tune"
@@ -829,8 +774,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Learning rate finder"
@@ -1073,19 +1017,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "## 1 cycle training"
+    "## 1 Cycle training"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Another novel approach of training brought about easily using the Fastai library is Leslie Smith's 1cycle training.\n",
     "\n",
@@ -1101,9 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1159,9 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.unfreeze()"
@@ -1169,9 +1104,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We unfreeze the previous pretrained layers and train them specifically for our task of classifying flowers to fine-tune them for our flower classifier."
    ]
@@ -1179,9 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1222,9 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can see that this plot is different than before as we are finding the best minima to land on an already trained model. Let's choose an LR somewhere in the middle before the loss explodes again! \n",
     "\n",
@@ -1235,7 +1164,6 @@
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1312,9 +1240,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "In addition to these steps, the 1 cycle policy also implements the `cyclical momentum` trick as mentioned by Leslie Smith in his [paper](https://arxiv.org/pdf/1803.09820.pdf). \n",
     "\n",
@@ -1327,9 +1253,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can view the learning rates and momentum plots during training as follows:"
    ]
@@ -1337,9 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1360,18 +1282,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can clearly see that the plots between learning rate and momentum are inversely proportional as explained above."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Let's view the `plot_loss` graph to see how well the training is going on:"
    ]
@@ -1380,7 +1298,6 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1403,27 +1320,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can see that the training loss and validation loss is stil decreasing and we get an accuracy of about 97%. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "> To learn more about the 1cycle training approach refer to Sylvain's [post](https://sgugger.github.io/the-1cycle-policy.html#the-1cycle-policy) on it or chapter 13 of the [Fastbook](https://github.com/fastai/fastbook)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
@@ -1431,8 +1342,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Discriminative learning rates"
@@ -1672,8 +1582,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Number of epochs of training"
@@ -1803,18 +1712,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Deeper architectures"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Till now we have used a `resnet34` architecture which indicates that it has 34 layers.\n",
     "\n",
@@ -1823,9 +1728,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Let's train a deeper pretrained model in the form of resnet50 which has 50 layers as compared to the 34 layers used till now."
    ]
@@ -1834,7 +1737,6 @@
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1959,9 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1983,9 +1883,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.save('flowers-resnet50')"
@@ -1994,9 +1892,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2026,9 +1922,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We can see that a deep resnet 50 architecture surely helps in bringing up the accuracy of the model to just over 98%.\n",
     "\n",
@@ -2040,9 +1934,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2064,9 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2096,9 +1986,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Let's try to fine-tune this deeper resnet50 model by using the strategies we used earlier on:"
    ]
@@ -2106,9 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2150,9 +2036,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2207,9 +2091,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "After a bit more of training the model reaches the 99% mark all while the training loss and validation loss is still reducing. \n",
     "\n",
@@ -2219,9 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "learn.save('flowers-resnet50-best')"
@@ -2230,9 +2110,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2261,27 +2139,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Conclusion"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "In this post, we have successfully seen how to take a baseline model and improve upon it considerably.\n",
     "\n",
@@ -2294,9 +2166,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
@@ -2304,8 +2174,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## References"
